syntax = "proto3";

package platform.server.v1;

option go_package = "github.com/home-cloud-io/core/api/platform/server/v1";

service InternalService {
  rpc AddMdnsHost(AddMdnsHostRequest) returns (AddMdnsHostResponse) {}
  rpc RemoveMdnsHost(RemoveMdnsHostRequest) returns (RemoveMdnsHostResponse) {}
}

message AddMdnsHostRequest {
  string hostname = 1;
}
message AddMdnsHostResponse { }

message RemoveMdnsHostRequest {
  string hostname = 1;
}
message RemoveMdnsHostResponse { }

